--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     },
     "dependencies": {
         "@babel/preset-env": "^7.19.3",
+        "@mdi/font": "^7.0.96",
         "axios": "^0.27.2",
         "core-js": "^3.8.3",
+        "material-design-icons-iconfont": "^6.7.0",
         "vue": "^2.6.14",
         "vuetify": "^2.6.0"
     },
@@ -43,6 +45,7 @@
         "rules": {
             "no-unused-vars": "off"
         }
+        
     },
     "browserslist": [
         "> 1%",
